SONAR-10694 Issue actions dropdown cut off for issues above file level

--- a/server/sonar-web/src/main/js/components/SourceViewer/styles.css
+++ b/server/sonar-web/src/main/js/components/SourceViewer/styles.css
@@ -85,7 +85,7 @@
 }
 
 .source-line-last .source-line-code {
-  padding-bottom: 80px;
+  padding-bottom: 160px;
 }
 
 .source-viewer pre {
